--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = https://github.com/borisbat/dasHV.git
 [submodule "modules/dasSFML"]
 	path = modules/dasSFML
-	url = https://github.com/borisbat/dasSFML.git
+	url = https://github.com/spiiin/dasSFML
